--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "test-coverage": "jest --verbose --coverage"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
@@ -21,7 +22,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.5.1",
     "@types/validator": "^13.7.2",
     "@types/validatorjs": "^3.15.0",
     "babel-jest": "^28.0.3",
